1.13.2
------
(RB=254542)
Refactor when projections are encoded in the URI.  Move encoding back to the normal URI encoding process.

1.13.1
------
(RB=252070)
Added add markdown and markup to ZKConnectionManager


1.13.0
------
(RB=253633)
Added next protocol version. Set the latest protocol version to 1. Added a FORCE_USE_NEXT ProtocolVersionOption. Updated negotiation code.

1.12.4
------
(RB=252372)
Fix d2 rewrite bug and fix related pathKeys incorrect encoding issue.

(RB=251668)
Fix for handling invalid MIME types in accept header. Now, if a request has one or more invalid MIME types in the accept header of the request, the request is rejected with a 400. If the no supported MIME type is found in the specified accept header, a 406 is returned BEFORE the request is processed.

(RB=253327)
Fixed assertion ordering in TestRestClientRequestBuilder.

1.12.3
------
(RB=250488)
pegasus plugin: Add "overrideGeneratedDir" property to override per-module generated directory.

1.12.2
------
(RB=251936)
Added null checks for ComplexResourceKey.makeReadOnly

1.12.1
------
(RB=250849)
Revert RB 249757

1.12.0
------
(RB=248588)
RestClient now fetches properties for the URI the request is going to before sending the request.
Added RequestOptions at the top level client builders as well as each generated RequestBuilder.
Added Rest.li protocol version negotiation.

1.11.2
------
(RB=248629)
Improve Rest.li projection performance, especially in sparse use cases.
Rename DataMapProcessor to DataComplexProcessor. The old DataMapProcessor is deprecated.

1.11.1
------
(RB=249757)
Fix d2 rewrite bug

1.11.0
------
(RB=235394)
Refactor *RequestBuilders into *RequestUriBuilders that are responsbile for constructing the request URI.
Introduced the concept of a Rest.li protocol version.

1.10.7
------
(RB=240001)
Providing a way to get the response payload and status without catching exceptions in case of a Rest.Li error.

(RB=242468)
Add more tests for AbstractRequestBuilder.