@@ -3,6 +3,9 @@
 (RB=254542)
 Refactor when projections are encoded in the URI.  Move encoding back to the normal URI encoding process.
 
+(RB=255178)
+Include schemas referenced inline when generating OPTIONS responses.
+
 1.13.1
 ------
 (RB=252070)
